# CorridorKey-OFX

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
cmake/: OpenFX.cmake
docs/: diagnostics.md
docs/public/: apple-1.0-readiness.md  github-release-v1.0.0.md  host-gates.md  release-test-summary.json  residual-risks.md
packaging/: CHANGELOG.md  DEPENDENCIES.md  KNOWN_ISSUES.md  THIRD_PARTY_NOTICES.md  build_bundle.py  macos.md  offline-model-package-manifest.example.json  ofx-bundle-layout.md  uninstall.md  uninstall_corridorkey_ofx.py
scripts/: check_ofx_binary_scanner_strings.py  doctor_dev_env.py  download_corridorkey_models.py  fetch_openfx_sdk.py  run_cpu_backend_fixture.py  run_gpu_backend_fixture.py
sidecar/corridorkey_sidecar/: __init__.py  cache.py  logging_config.py  model_manager.py  model_source_gate.py  protocol.py  redaction.py  runtime_config.py  server.py  support_bundle.py
sidecar/corridorkey_sidecar/backends/: base.py  torch_backend.py
sidecar/tests/: test_backend_contract.py  test_backend_oom.py  test_cache.py  test_cancel.py  test_fake_infer.py  test_health.py  test_model_bootstrap.py  test_model_download.py  test_model_manager.py  test_protocol.py  test_queue_and_oom.py  test_redaction.py  test_request_contract.py  test_support_bundle.py
src/core/: AlphaHint.cpp  AlphaHint.h  ColorAlphaContract.cpp  ColorAlphaContract.h  ImageFormat.cpp  ImageFormat.h  PixelBuffer.h  PixelConvert.cpp  PixelConvert.h  RenderWindow.cpp  RenderWindow.h  StatusFrame.cpp  StatusFrame.h
src/ofx/: CorridorKeyPlugin.cpp  CorridorKeyPlugin.h  OfxDescribe.cpp  OfxParameters.cpp  OfxRender.cpp
src/sidecar_client/: SidecarClient.cpp  SidecarClient.h  SidecarProcess.cpp  SidecarProcess.h  SidecarProtocol.h
tests/cpp/: test_abort_polling.cpp  test_alpha_hint.cpp  test_bundle_layout.cpp  test_color_alpha_contract.cpp  test_image_format.cpp  test_ofx_binary_scan.cpp  test_ofx_clip_preferences.cpp  test_ofx_descriptor.cpp  test_ofx_general_context.cpp  test_oom_status.cpp  test_output_modes.cpp  test_pixel_convert.cpp  test_render_window.cpp  test_request_contract.cpp  test_sidecar_failure.cpp  test_sidecar_launch_contract.cpp  test_sidecar_protocol.cpp  test_status_frame.cpp
tests/fixtures/backend/: README.md
tests/fixtures/benchmark/: README.md
tests/fixtures/color_alpha/: README.md
tests/packaging/: test_build_bundle.py  test_uninstaller.py
